<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mp3_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.droidsdoit.mp3player.MP3PlayerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:text="@string/mp3_instructions" />

    <LinearLayout
        android:id="@+id/mp3_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/mp3_url"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHintText"
            android:textSize="14dp"
            android:hint="@string/mp3_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:text="@string/track_name"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mp3_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHintText"
                android:textSize="14dp"
                android:hint="@string/track_hint"/>

            <Button
                android:id="@+id/add_mp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                android:layout_toRightOf="@id/mp3_name">
            </Button>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mp3_listview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mp3_input_layout"
        android:paddingTop="24dp"
        android:textColor="@color/colorText"
        android:text="@string/tracks_title"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/mp3_listview"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/mp3_listview_title"
        android:paddingTop="8dp"
        android:paddingBottom="24dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/colorListViewSelected">
    </ListView>

    <LinearLayout
        android:id="@+id/mp3_play_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mp3_listview"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_disabled"/>
        <ImageButton
            android:id="@+id/playpause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play_disabled"/>
        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forward_disabled"/>
    </LinearLayout>

</RelativeLayout>
